# cpp-csharp-file-compression

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build-windows.bat  build-windows.ps1  cmake-toolchain-windows.cmake  cpp-csharp-file-compression.sln  installer.nsi
CSharpUI/CompressionTool/: App.axaml  App.axaml.cs  CompressionTool.csproj  FileDialogTest.cs  Program.cs  TestConsole.cs  ViewLocator.cs  app.manifest
CSharpUI/CompressionTool/Converters/: AlgorithmConverter.cs
CSharpUI/CompressionTool/Models/: CompressionMetrics.cs
CSharpUI/CompressionTool/Services/: CompressionService.cs  CompressionServiceManual.cs  FileDialogService.cs  IFileDialogService.cs  NativeLibraryInitializer.cs
CSharpUI/CompressionTool/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
CSharpUI/CompressionTool/Views/: MainWindow.axaml  MainWindow.axaml.cs
include/: compression_api.h  huffman.h  lzw.h  rle.h
src/: compression_api.cpp  huffman.cpp  lzw.cpp  main.cpp  rle.cpp
tests/: sample_lzw_v2.txt
